--- a/package.json
+++ b/package.json
@@ -17,5 +17,14 @@
   "bugs": {
     "url": "https://github.com/smattis18/Project_2/issues"
   },
-  "homepage": "https://github.com/smattis18/Project_2#readme"
+  "homepage": "https://github.com/smattis18/Project_2#readme",
+  "dependencies": {
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "express-handlebars": "^3.0.0",
+    "fs": "0.0.1-security",
+    "mysql2": "^1.6.4",
+    "path": "^0.12.7",
+    "sequelize": "^4.41.2"
+  }
 }
